# aimmo-helloworld

./: README.md  pyproject.toml
.github/workflows/: docker-image.yml
docker/: Dockerfile
kubernetes/: ingress.yaml
src/: app.py
