[tool.poetry]
name = "on-bording"
version = "0.1.0"
description = ""
authors = ["Austin(BE) <jjkim0816@gmail.com>"]
readme = "README.md"
packages = [{include = "on_bording"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
pylint = "^2.16.4"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

